# building-1c

building/: CMakeLists.txt
building/A/: CMakeLists.txt  preparing.py
building/B/: CMakeLists.txt  lib.cpp  lib.h
building/C/: main.h
